--- a/working/index.html
+++ b/working/index.html
@@ -1,43 +1,49 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>titile</title>
-<!-- The main CSS file -->
-<link href="css/style.css" rel="stylesheet" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <META HTTP-EQUIV="pragma" CONTENT="no-cache">
+  <META HTTP-EQUIV="Cache-Control" CONTENT="no-store, must-revalidate">
+  <META HTTP-EQUIV="expires" CONTENT="Wed, 26 Feb 1997 08:21:57 GMT">
+  <META HTTP-EQUIV="expires" CONTENT="0">
+  <title>titile</title>
+  <!-- The main CSS file -->
+  <link href="css/style.css" rel="stylesheet" />
 
 </head>
 
 <!-- 主背景 -->
+
 <body>
 
+  <!--效果html开始-->
 
-<!--效果html开始-->
+  <!-- 时钟大小 -->
 
-<!-- 时钟大小 -->
+  <div id="clock" class="light">
 
-<div id="clock" class="light">
+    <div class="display">
 
-  <div class="display">
+      <div class="weekdays"> </div>
 
-    <div class="weekdays"> </div>
+      <div class="ampm"> </div>
 
-    <div class="ampm"> </div>
+      <div class="alarm"> </div>
 
-    <div class="alarm"> </div>
+      <div class="digits"> </div>
 
-    <div class="digits"> </div>
-    
+    </div>
+
   </div>
 
-</div>
-
-<div class="button-holder"> <a class="button">Switch Theme</a> </div>
-<script src="js/jquery.min.js"></script> 
-<script src="js/moment.min.js"></script> 
-<script src="js/script.js"></script>
-<!--效果html结束-->
+  <div class="button-holder"> <a class="button">Switch Theme</a> </div>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/moment.min.js"></script>
+  <script src="js/script.js"></script>
+  <!--效果html结束-->
 
 
 </body>
+
 </html>
