--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -24,10 +24,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link crossorigin="anonymous" integrity="sha512-JcPpUo5uB6wvlcJvpCJSzD37MxGkp0jG7yoyEzSzirA8/UmTfOraIjW7vs/xckcp92WjLEaeNAiKwgDqoDTkhg==" href="https://lib.baomitu.com/antd/4.17.0-alpha.3/antd.dark.min.css" rel="stylesheet">
-    <title>React App</title>
+    <title>React Redux App</title>
   </head>
-  <body>
+  <body
+    style="background: url(https://www.oleou.com/zt/bing.php) no-repeat;
+    /* 拉伸铺满全屏 */
+    background-size: cover;
+    
+    "
+  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
